--- a/car.css
+++ b/car.css
@@ -5,7 +5,9 @@
     display: block;
     clear: both;
 }
-
+img {
+    max-width: 100%;
+}
 body {
     background-color: green;
 }
@@ -20,12 +22,14 @@ article {
     height: 200px;
 }
 #meter{
-    float: right;
+    width: 150px;
+    float: left;
     margin: 5px;
 }
-
-img {
-    width: 150px;
+#shift {
+    width: 100px;
+    float: right;
+    margin: 5px;
 }
 .drive-area {
     background-color: #2f4f4f;
